--- a/ohladance2/css/main.css
+++ b/ohladance2/css/main.css
@@ -31,7 +31,7 @@ h2 {
 
 h3 {
     font-size: 2.2rem;
-    margin: .7rem 0;
+    margin: 2rem 0;
 }
 
 img {
@@ -47,7 +47,7 @@ body {
     /*background-image: linear-gradient(45deg, var(--webte-color-ltBlack) 25%, transparent 25%, transparent 75%, var(--webte-color-ltBlack) 75%, var(--webte-color-ltBlack)),
                     linear-gradient(45deg, var(--webte-color-ltBlack) 25%, transparent 25%, transparent 75%, var(--webte-color-ltBlack) 75%, var(--webte-color-ltBlack));
     */
-    }
+}
 
 video {
     position: fixed;
@@ -58,7 +58,7 @@ video {
     z-index: -1;
     object-fit: cover;
     opacity: 0.8;
-    
+
 }
 
 .container {
@@ -68,8 +68,6 @@ video {
     /* aby neprekrocil tuto hodnotu */
     margin: 0 auto;
 }
-
-
 
 .title {
     width: 100%;
@@ -93,7 +91,7 @@ video {
     width: 100%;
     height: 100vh;
     background: #382b00;
-    mix-blend-mode:overlay;
+    mix-blend-mode: overlay;
     z-index: 0;
 }
 
@@ -103,7 +101,7 @@ video {
     width: 100%;
     align-items: center;
     justify-content: center;
-    background-color: rgba(255, 255, 255, 0.801);
+    background-color: rgba(255, 247, 238, 0.801);
     z-index: 1;
     position: relative;
     padding-top: 20px;
@@ -119,39 +117,104 @@ form {
     flex-wrap: wrap;
 }
 
+.form-part-title {
+    display: flex;
+    width: 100%;
+    align-items: center;
+    justify-content: start;
+    position: relative;
+    z-index: 1;
+}
+
+.form-part-title::after {
+    content: "";
+    display: flex;
+    background-color: black;
+    height: 3px;
+    flex: 1;
+    margin-left: 3rem;
+
+}
+
+.form-group {
+    display: flex;
+    flex-direction: row;
+    justify-content: left;
+    align-items: end;
+    width: 90%;
+    margin-top: 1rem;
+}
+
+.form-under {
+    display: flex;
+    flex-direction: column;
+    width: 50%;
+    margin-right: 1rem;
+}
+
 .form-left {
-    flex: 3;
+    flex: 1;
 }
 
 .form-right {
-    flex: 2;
+    flex: 1;
+    margin-left: 2rem;
 }
 
-input {
+input,
+textarea,
+select {
     font-family: 'Righteous';
     font-size: 1.8rem;
     padding-left: 1rem;
     outline: none;
 }
 
-input[type=text] {
+input[type=text],
+input[type=email],
+input[type=tel],
+input[type=number],
+input[type=date],
+select {
     width: 70%;
     height: 4rem;
-    
     border: 3px solid #ccc;
     -webkit-transition: 0.5s;
     transition: 0.5s;
     border-radius: 3px;
+    background: white;
 }
 
-input[type=text]:focus {
+input[type=checkbox] {
+    width: 20px;
+    height: 20px;
+    transform: translateY(-0.2rem);
+}
+
+.new-box {
+    margin: 1rem 0;
+}
+
+#age,
+#birth-date {
+    width: 100%;
+}
+
+#phone-code {
+    width: 12rem;
+}
+
+input[type=text]:focus,
+input[type=email]:focus,
+input[type=tel]:focus,
+input[type=number]:focus {
     border: 3px solid black;
     width: 90%;
 }
 
 .err-msg {
     color: red;
-    font-weight:bolder;
+    font-weight: bolder;
     font-size: 1.8rem;
     padding: .8rem 0;
 }
@@ -160,12 +223,13 @@ input[type=text]:focus {
     display: none;
 }
 
-input[type=submit], 
-input[type=button]{
+input[type=submit],
+input[type=button] {
+    text-align: center;
     border: none;
     text-decoration: none;
     cursor: pointer;
-    margin: 1rem 0;
+    margin: 1rem 1rem;
     padding: 2rem 5rem;
     background-color: black;
     color: var(--webte-color-yellow);
@@ -180,10 +244,124 @@ input[type=button]:hover {
     color: black;
 }
 
+input[type=radio] {
+    margin: 0 1rem;
+    padding: 1rem;
+    font: inherit;
+    color: var(--webte-color-yellow);
+    transform: scale(2); 
+    transition: 1s ease-in;
+}
+
+.equipment {
+    display: flex;
+    flex-direction: column;
+    align-items: start;
+    justify-content: space-between;
+}
+
+.equipment input {
+    float: left;
+}
+
+.equipment {
+    clear: both;
+}
+
+label {
+    font-size: 1.7rem;
+}
+
+.phoneNum {
+    margin-left: .5rem;
+    width: 22rem;
+}
+
+.form-phone-wrapper {
+    display: flex;
+    flex-direction: row;
+}
+
+textarea {
+    width: 100%;
+    height: 12rem;
+    padding: 12px 20px;
+    box-sizing: border-box;
+    border: 3px solid #ccc;
+    border-radius: 5px;
+    background-color: #f8f8f8;
+    font-size: 16px;
+    resize: none;
+    transition: .5s;
+}
+
+textarea:focus {
+    border: 3px solid black;
+}
+
+.char-counter {
+    margin-top: .5rem;
+    font-size: 1.5rem;
+}
+
+#whoami {
+    padding: 1rem 3rem;
+    margin: 2rem 0;
+}
+
 .btnsRow {
     display: flex;
     width: 90%;
-    justify-content: space-between;
+    justify-content: space-around;
+}
+
+
+/* MODAL ----------------------------------------------*/
+
+.modal {
+    display: none;
+    position: fixed;
+    z-index: 100;
+    padding-top: 5%;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    overflow: auto;
+    background-color: rgb(0, 0, 0);
+    background-color: rgba(0, 0, 0, 0.4);
+}
+
+.modal-content {
+    background-color: #fefefe;
+    margin: auto;
+    padding: 20px;
+    width: 80%;
+}
+
+.close {
+    color: #aaaaaa;
+    float: right;
+    font-size: 28px;
+    font-weight: bold;
+}
+
+.close:hover,
+.close:focus {
+    color: #000;
+    text-decoration: none;
+    cursor: pointer;
+}
+
+.added-values {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+}
+
+.final-price {
+    margin-left: 3rem;
 }
 
 
@@ -207,19 +385,40 @@ footer p {
     border-radius: 10px;
 }
 
-@media screen and (max-width:600px) {
-    .row{
-        flex-direction: column;
-    }
+@media screen and (max-width:768px) {
 
     form {
         flex-direction: column;
     }
-    .form-left input[type=text]{
+
+    .form-right {
+        margin-left: 0;
+    }
+
+}
+
+@media screen and (max-width:520px) {
+    :root {
+        font-size: 9px;
+    }
+
+    input[type=text],
+    input[type=email],
+    input[type=tel] {
         width: 100%;
     }
 }
 
+@media screen and (max-width:450px) {
+    .form-group {
+        flex-direction: column;
+        align-items: start;
+        width: 100%;
+    }
+
+    .form-under {
+        width: 100%;
+    }
 
 
-
+}
